2008-05-16  Jürg Billeter  <j@bitron.ch>

	* vala/valaconstant.vala:
	* vala/valainterfacewriter.vala:
	* vapigen/valagidlparser.vala:

	Allow hiding constants in the metadata file for vapigen,
	based on patch by Ali Sabil

2008-05-16  Ali Sabil  <ali.sabil@gmail.com>

	* vala/valainterfacewriter.vala: Add support for class
	methods in the interface writer

2008-05-16  Jürg Billeter  <j@bitron.ch>

	* vala/valaarraytype.vala:
	* vala/valaclass.vala:
	* vala/valaclassinstancetype.vala:
	* vala/valaclasstype.vala:
	* vala/valadatatype.vala:
	* vala/valainterfaceinstancetype.vala:
	* vala/valainterfacetype.vala:
	* vala/valainterfacewriter.vala:
	* vala/valamemorymanager.vala:
	* vala/valanullchecker.vala:
	* vala/valaparser.vala:
	* vala/valareferencetransferexpression.vala:
	* vala/valasemanticanalyzer.vala:
	* vala/valasymbolresolver.vala:
	* vala/valatypeparametertype.vala:
	* vala/valaunresolvedtype.vala:
	* vala/valavaluetype.vala:
	* gobject/valaccodeassignmentbinding.vala:
	* gobject/valaccodegenerator.vala:
	* gobject/valaccodeinvocationexpressionbinding.vala:
	* gobject/valagidlwriter.vala:
	* vapigen/valagidlparser.vala:
	* vapi/glib-2.0.vapi:

	Replace DataType.transfers_ownership and DataType.takes_ownership
	by DataType.value_owned, prepare support for owned value types

2008-05-13  Jürg Billeter  <j@bitron.ch>

	* vala/valaclass.vala:
	* vala/valainterfacewriter.vala:
	* vala/valamemorymanager.vala:
	* vala/valaproperty.vala:
	* vala/valasemanticanalyzer.vala:
	* gobject/valaccodeassignmentbinding.vala:
	* gobject/valaccodeclassbinding.vala:
	* gobject/valaccodegenerator.vala:
	* gobject/valaccodememberaccessbinding.vala:
	* gobject/valaccodetypesymbolbinding.vala:
	* gobject/valagidlwriter.vala:

	Rename Property.type_reference to Property.property_type

2008-05-13  Jürg Billeter  <j@bitron.ch>

	* vala/valadelegate.vala:
	* vala/valaformalparameter.vala:
	* vala/valainterfacewriter.vala:
	* vala/valamemorymanager.vala:
	* vala/valamethod.vala: